--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "sass": "^1.57.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.0",
     "prisma": "^4.8.0"
   }
 }
