--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.1",
+    "@mui/material": "^5.11.4",
     "@next/font": "13.0.7",
-    "@prisma/client": "^4.8.0",
+    "@prisma/client": "^4.8.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
-    "next": "^13.1.1-canary.1",
+    "next": "^13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
@@ -31,6 +31,6 @@
   },
   "devDependencies": {
     "@types/uuid": "^9.0.0",
-    "prisma": "^4.8.0"
+    "prisma": "^4.8.1"
   }
 }
