--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@next/font": "13.0.7",
     "@prisma/client": "^4.8.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "@tanstack/react-query": "^4.24.4",
+    "@tanstack/react-query-devtools": "^4.24.4",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
