--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --show-all",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -23,6 +24,7 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "husky": "^8.0.3",
     "next": "^13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@types/uuid": "^9.0.0",
-    "prisma": "^4.8.1"
+    "prisma": "^4.8.1",
+    "husky": "^8.0.0"
   }
 }
