--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": "next/core-web-vitals",
   "rules": {
-    "no-unused-vars": ["warn", { "varsIgnorePattern": "^_", "args": "none", "ignoreRestSiblings": true }]
+    "no-unused-vars": ["error", { "varsIgnorePattern": "^_", "args": "none", "ignoreRestSiblings": true }]
   }
 }
