--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -19,12 +21,17 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.24.4",
     "@tanstack/react-query-devtools": "^4.24.4",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.4.0",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "husky": "^8.0.3",
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
     "next": "^13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,8 +41,9 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
     "@types/uuid": "^9.0.0",
-    "prisma": "^4.8.1",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "prisma": "^4.8.1"
   }
 }
